# econ-legalizer

./: README.md  pyproject.toml
econ_legalizer/: __init__.py  main.py  prompts.py
