[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-legalizer"
version = "2025.12.21195956"
description = "econ-legalizer is a package that extracts structured summaries and insights from text input on regional economic and legal issues."
readme = "README.md"
authors = [{ name = "econ-legalizer", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/econ-legalizer"
